@@ -116,6 +116,23 @@ class IllegalSafeLoggingArgumentTest {
     }
 
     @Test
+    public void testConstructor() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test {",
+                        "  void f(@Unsafe String value) {",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    new Ob(value);",
+                        "  }",
+                        "  private static final class Ob {",
+                        "    Ob(@Safe Object obj) {}",
+                        "  }",
+                        "}")
+                .doTest();
+    }
+
+    @Test
     public void testVarArgParameter() {
         helper().addSourceLines(
                         "Test.java",
@@ -819,6 +836,65 @@ class IllegalSafeLoggingArgumentTest {
     }
 
     @Test
+    public void testThrowableParameterIsUnsafe() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test {",
+                        "  void f(IllegalStateException e) {",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE' "
+                                + "but the parameter requires 'SAFE'.",
+                        "    fun(e);",
+                        "  }",
+                        "  private static void fun(@Safe Object obj) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testThrowableStackTraceAsStringIsUnsafe() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "import com.google.common.base.Throwables;",
+                        "class Test {",
+                        "  void f(IllegalStateException e) {",
+                        "    String strVal = Throwables.getStackTraceAsString(e);",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE' "
+                                + "but the parameter requires 'SAFE'.",
+                        "    fun(strVal);",
+                        "  }",
+                        "  private static void fun(@Safe Object obj) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testCatchDoNotLog() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "import com.google.common.base.Throwables;",
+                        "class Test {",
+                        "  void f() {",
+                        "    try {",
+                        "      action();",
+                        "    } catch (@DoNotLog RuntimeException e) {",
+                        "      // BUG: Diagnostic contains: Dangerous argument value: arg is 'DO_NOT_LOG' "
+                                + "but the parameter requires 'UNSAFE'.",
+                        "      fun(e);",
+                        "      // BUG: Diagnostic contains: Dangerous argument value: arg is 'DO_NOT_LOG' "
+                                + "but the parameter requires 'UNSAFE'.",
+                        "      fun(e.getMessage());",
+                        "    }",
+                        "  }",
+                        "  protected void action() {}",
+                        "  private static void fun(@Unsafe Object obj) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
     public void testStringFormat() {
         helper().addSourceLines(
                         "Test.java",
@@ -1037,6 +1113,26 @@ class IllegalSafeLoggingArgumentTest {
     }
 
     @Test
+    public void testThrowableFieldAssignment() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "import java.util.*;",
+                        "class Test<OutputT> {",
+                        "  private volatile Set<Throwable> fieldValue = null;",
+                        "  static final class Other {",
+                        "  void f(Test obj, Set<Throwable> newValue) {",
+                        "    synchronized (obj) {",
+                        "      if (obj.fieldValue != newValue)",
+                        "      obj.fieldValue = newValue;",
+                        "    }",
+                        "  }",
+                        "  }",
+                        "}")
+                .doTest();
+    }
+
+    @Test
     public void disagreeingSafetyAnnotations() {
         helper().addSourceLines(
                         "Test.java",
@@ -1173,6 +1269,83 @@ class IllegalSafeLoggingArgumentTest {
     }
 
     @Test
+    public void testRawTypes() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "import java.util.function.*;",
+                        "@SuppressWarnings(\"rawtypes\")",
+                        "interface Test<T extends CharSequence> {",
+                        "  Iface iface();",
+                        "  default void f(@Unsafe String value) {",
+                        "    iface().accept(value);",
+                        "  }",
+                        "  interface Iface<T> extends Consumer<T> {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testResourceIdentifierComponentSafety() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "import java.util.function.*;",
+                        "import com.palantir.ri.*;",
+                        "class Test {",
+                        "  void f(@Unsafe ResourceIdentifier rid) {",
+                        "    fun(rid.getService());",
+                        "    fun(rid.getInstance());",
+                        "    fun(rid.getType());",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE' "
+                                + "but the parameter requires 'SAFE'.",
+                        "    fun(rid.getLocator());",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE' "
+                                + "but the parameter requires 'SAFE'.",
+                        "    fun(rid);",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE' "
+                                + "but the parameter requires 'SAFE'.",
+                        "    fun(rid.toString());",
+                        "  }",
+                        "  void fun(@Safe Object in) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testResourceIdentifierCreationSafety() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "import java.util.function.*;",
+                        "import com.palantir.ri.*;",
+                        "class Test {",
+                        "  void f(@Unsafe String value) {",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE' "
+                                + "but the parameter requires 'SAFE'.",
+                        "    safe(ResourceIdentifier.of(value));",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE' "
+                                + "but the parameter requires 'SAFE'.",
+                        "    safe(ResourceIdentifier.valueOf(value));",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE' "
+                                + "but the parameter requires 'SAFE'.",
+                        "    safe(ResourceIdentifier.of(\"service\", \"instance\", \"type\", value));",
+                        "    ResourceIdentifier varArgs = ResourceIdentifier.of(",
+                        "      \"service\", \"instance\", \"type\", \"loc\", value);",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE' "
+                                + "but the parameter requires 'SAFE'.",
+                        "    safe(varArgs);",
+                        "    safe(ResourceIdentifier.valueOf(\"ri.service.instance.type.name\"));",
+                        "    safe(ResourceIdentifier.of(\"ri.service.instance.type.name\"));",
+                        "    safe(ResourceIdentifier.of(\"service\", \"instance\", \"type\", \"safe-locator\"));",
+                        "    safe(ResourceIdentifier.of(\"service\", \"instance\", \"type\", \"safe\", \"locator\"));",
+                        "  }",
+                        "  void safe(@Safe Object in) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
     public void testSafeArgOfUnsafe_recommendsUnsafeArgOf() {
         refactoringHelper()
                 .addInputLines(
@@ -1233,6 +1406,372 @@ class IllegalSafeLoggingArgumentTest {
                         "  private static void fun(@Safe Object obj) {}",
                         "}")
                 .expectUnchanged()
+                .doTest();
+    }
+
+    @Test
+    public void testBinaryOperationsOnUnsafeInput() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test {",
+                        "  @Safe",
+                        "  void f(@Unsafe Throwable input) {",
+                        "    fun(input instanceof InterruptedException);",
+                        "    fun(input == null);",
+                        "    fun(input != null);",
+                        "    fun(input == new Object());",
+                        "    fun(input != null && input instanceof InterruptedException);",
+                        "  }",
+                        "  private static void fun(@Safe Object obj) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testPrimitiveBoxing() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test {",
+                        "  @Safe",
+                        "  void f(@Unsafe long input) {",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    fun(input);",
+                        "  }",
+                        "  private static void fun(@Safe Object obj) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testPrimitiveUnboxing() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test {",
+                        "  @Safe",
+                        "  void f(@Unsafe Long input) {",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    fun(input);",
+                        "  }",
+                        "  private static void fun(@Safe long value) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testStringBuilder() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test {",
+                        "  void f(@Safe String safe, @Unsafe String unsafe) {",
+                        "    fun(new StringBuilder(safe));",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    fun(new StringBuilder(unsafe));",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    fun(new StringBuilder(safe).append(unsafe).toString());",
+                        "    StringBuilder sb = new StringBuilder().append(safe);",
+                        "    sb.append(safe).append(unsafe);",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    fun(sb.append(safe).toString());",
+                        "  }",
+                        "  private static void fun(@Safe Object value) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testStringBuffer() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test {",
+                        "  void f(@Safe String safe, @Unsafe String unsafe) {",
+                        "    fun(new StringBuffer(safe));",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    fun(new StringBuffer(unsafe));",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    fun(new StringBuffer(safe).append(unsafe).toString());",
+                        "    StringBuffer sb = new StringBuffer().append(safe);",
+                        "    sb.append(safe).append(unsafe);",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    fun(sb.append(safe).toString());",
+                        "  }",
+                        "  private static void fun(@Safe Object value) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testTypeVariable() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test<@Unsafe T> {",
+                        "  void f(T value) {",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    fun(value);",
+                        "  }",
+                        "  private static void fun(@Safe Object value) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testBindingToSafeTypeVariable() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test {",
+                        "  @Unsafe static final class UnsafeType {}",
+                        "  static final class One<@Safe T> {",
+                        "    static <U> One<U> of(U value) { return null; }",
+                        "  }",
+                        "  void f() {",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    new One<UnsafeType>();",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    One.of(new UnsafeType());",
+                        "  }",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testMethodTypeVariable() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test {",
+                        "  private static void fun(@Safe Object value) {}",
+                        "  private static <@Unsafe T> void handle(T input) {",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    fun(input);",
+                        "  }",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testBindingToSafeMethodTypeVariable() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "import java.util.Optional;",
+                        "class Test {",
+                        "  @Unsafe static final class UnsafeType {}",
+                        "  static <@Safe U> Optional<U> of(U value) { return Optional.empty(); }",
+                        "  static <@Safe U> Optional<U> empty() { return Optional.empty(); }",
+                        "  void f() {",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    Test.of(new UnsafeType());",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    Test.<UnsafeType>empty();",
+                        "  }",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testTypeVariablesInConstructor() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "import java.util.*;",
+                        "import java.util.function.*;",
+                        "class Test {",
+                        "  static final class Foo<T> {",
+                        "    Foo(T input) {}",
+                        "  }",
+                        "  static Foo<String> f(Supplier<String> value) {",
+                        "    return new Foo<>(value.get());",
+                        "  }",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testRecordConstruction() {
+        helper().setArgs("--release", "15", "--enable-preview")
+                .addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test {",
+                        "  record MyRecord(@Safe String value) {}",
+                        "  void f(@Unsafe String value) {",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    new MyRecord(value);",
+                        "  }",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testRecordComponentUsage() {
+        helper().setArgs("--release", "15", "--enable-preview")
+                .addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test {",
+                        "  record MyRecord(@Unsafe String value) {}",
+                        "  void f(MyRecord rec) {",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    fun(rec.value());",
+                        "  }",
+                        "  private static void fun(@Safe Object value) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testTransformingStreamCollectors() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "import java.util.*;",
+                        "import java.util.function.*;",
+                        "import java.util.stream.*;",
+                        "import com.google.common.collect.*;",
+                        "class Test {",
+                        "  @DoNotLog",
+                        "  interface TopLevel {",
+                        "     @Safe String name();",
+                        "     @Safe String value();",
+                        "     @DoNotLog String token();",
+                        "  }",
+                        "  void f(@Unsafe Stream<TopLevel> stream) {",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'DO_NOT_LOG'",
+                        "    fun(stream.collect(Collectors.toList()));",
+                        "    fun(stream.collect(Collectors.counting()));",
+                        "    fun(stream.collect(Collectors.toMap(TopLevel::name, TopLevel::value)));",
+                        "    fun(stream.collect(Collectors.toConcurrentMap(TopLevel::name, TopLevel::value)));",
+                        "    fun(stream.collect(Collectors.toUnmodifiableMap(TopLevel::name, TopLevel::value)));",
+                        "    fun(stream.collect(ImmutableMap.toImmutableMap(TopLevel::name, TopLevel::value)));",
+                        "    fun(stream.collect(ImmutableBiMap.toImmutableBiMap(TopLevel::name, TopLevel::value)));",
+                        "  }",
+                        "  private static void fun(@Safe Object value) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testResultOfInvocationSuperInterfaceAnnotated() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "import java.util.function.*;",
+                        "class Test {",
+                        "  @Unsafe",
+                        "  interface Iface {",
+                        "  }",
+                        "  static final class Impl implements Iface {}",
+                        "  void f(Supplier<Impl> supplier) {",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    fun(supplier.get());",
+                        "  }",
+                        "  private static void fun(@Safe Object value) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testSuperClassInterfaceAnnotated() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test {",
+                        "  @Unsafe",
+                        "  interface Iface {",
+                        "  }",
+                        "  static class Sup implements Iface {}",
+                        "  static class Sub extends Sup {}",
+                        "  void f(Sub value) {",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    fun(value);",
+                        "  }",
+                        "  private static void fun(@Safe Object value) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testMultipleInterfacesDifferentSafety() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test {",
+                        "  @Unsafe interface UnsafeIface {}",
+                        "  @Safe interface SafeIface {}",
+                        "  @DoNotLog interface DnlIface {}",
+                        "  static class One implements SafeIface, UnsafeIface {}",
+                        "  static class Two implements SafeIface, DnlIface, UnsafeIface {}",
+                        "  void f(One one, Two two) {",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    fun(one);",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'DO_NOT_LOG'",
+                        "    fun(two);",
+                        "  }",
+                        "  private static void fun(@Safe Object value) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testSuperclassLessStrictThanInterfaces() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test {",
+                        "  @DoNotLog interface DnlIface {}",
+                        "  @Safe static class Sup {}",
+                        "  static class Impl extends Sup implements DnlIface {}",
+                        "  void f(Impl value) {",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'DO_NOT_LOG'",
+                        "    fun(value);",
+                        "  }",
+                        "  private static void fun(@Safe Object value) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testCastSafety() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test {",
+                        "  @DoNotLog class DoNotLogClass {}",
+                        "  @Safe interface SafeClass {}",
+                        "  @Unsafe interface UnsafeClass {}",
+                        "  void f(Object object, UnsafeClass unsafeObject, @Unsafe Object unsafeAnnotatedObject) {",
+                        "    fun(object);",
+                        "    fun((SafeClass) object);",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    fun((UnsafeClass) object);",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'DO_NOT_LOG'",
+                        "    fun((DoNotLogClass) object);",
+                        "    // BUG: Diagnostic contains: Dangerous argument value: arg is 'UNSAFE'",
+                        "    fun((SafeClass) unsafeObject);",
+                        "    fun((SafeClass) unsafeAnnotatedObject);",
+                        "  }",
+                        "  private static void fun(@Safe Object obj) {}",
+                        "}")
+                .doTest();
+    }
+
+    @Test
+    public void testSubclassWithLenientSafety() {
+        helper().addSourceLines(
+                        "Test.java",
+                        "import com.palantir.logsafe.*;",
+                        "class Test {",
+                        "  @Unsafe interface UnsafeClass {}",
+                        "  // BUG: Diagnostic contains: "
+                                + "Dangerous type: annotated 'SAFE' but ancestors declare 'UNSAFE'.",
+                        "  @Safe interface SafeSubclass extends UnsafeClass {}",
+                        "}")
                 .doTest();
     }
 
